--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <li><a href="https://www.8858.top" target="_blank"> 8858顶级网(8858.top)</a></li>
             <li><a href="https://www.1567.top" target="_blank"> 1567顶级网(1567.top)</a></li>
             
-            <li><a href="https://www.cute.pub" target="_blank"> 可爱酒吧（cute.pub）</a></li>
             <li><a href="https://www.ywdj.xyz" target="_blank"> 一网打尽(9611.xyz)</a></li>
+            <li><a href="https://www.cute.pub" target="_blank"> 可爱酒吧（cute.pub）</a></li>
         </ul>
-        <h3>各个网站的详细介绍，请查看<a href="https://ywdj.xyz/about" target="_blank">洪文杰系列站点简介</a></h3>         
+        <h3>各个网站的详细介绍，请查看<a href="https://8858.top/" target="_blank">洪文杰系列站点简介</a></h3>         
     </div>
 </body>
 </html>
