--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>洪文杰的博客，The Blog of Wenjie Hong！</h1>
+        <h1>一网打尽|洪文杰的博客|The Blog of Wenjie Hong</h1>
         <h3>站长共建有3个国内网站和2个国外网站，分别是：</h3>       
         <ul>
             <li><a href="https://www.9876.top" target="_blank"> 9876导航网(9876.top)</a></li>
             <li><a href="https://www.8858.top" target="_blank"> 8858顶级网(8858.top)</a></li>
             <li><a href="https://www.1567.top" target="_blank"> 1567顶级网(1567.top)</a></li>
             
-            <li><a href="https://www.ywdj.xyz" target="_blank"> 一网打尽(9611.xyz)</a></li>
+            <li><a href="https://www.ywdj.xyz" target="_blank"> 一网打尽(ywdj.xyz)</a></li>
             <li><a href="https://www.cute.pub" target="_blank"> 可爱酒吧（cute.pub）</a></li>
         </ul>
         <h3>各个网站的详细介绍，请查看<a href="https://8858.top/" target="_blank">洪文杰系列站点简介</a></h3>         
