--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <li><a href="https://www.8858.top" target="_blank"> 8858顶级网</a>(8858.top，国内)</li>
             <li><a href="https://www.1567.top" target="_blank"> 1567顶级网</a>(1567.top，国内)</li>
             
-            <li><a href="https://www.ywdj.xyz" target="_blank"> 一网打尽</a>(ywdj.xyz，国外)</li>
-            <li><a href="https://www.cute.pub" target="_blank"> 可爱酒吧</a>（cute.pub，国外）</li>
+            <li><a href="https://ywdj.xyz" target="_blank"> 一网打尽</a>(ywdj.xyz，国外)</li>
+            <li><a href="https://cute.pub" target="_blank"> 可爱酒吧</a>（cute.pub，国外）</li>
         </ul>
         <h3>各个网站的详细介绍，请查看<a href="https://8858.top/" target="_blank">洪文杰系列站点简介</a></h3>         
     </div>
